# didupAPI-wrapper

./: .gitignore  LICENSE  README.md  esempio_async.py  esempio_poller.py  esempio_sync.py  main.py  pyproject.toml
didupwrapper/: __init__.py  auth.py  client.py  exceptions.py  models.py
didupwrapper/endpoints/: __init__.py  assenze.py  bacheca.py  fuori_classe.py  promemoria.py  registro.py  voti.py
didupwrapper/workers/: __init__.py  poller.py
tests/: test_client.py  test_models.py
