[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "didupwrapper"
version = "0.1.0"
description = "Wrapper Python (sync + async) per le API non documentate del registro elettronico DiDUP / Argo Famiglia"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rocciadura" }]
keywords = ["didup", "argo", "registro elettronico", "scuola", "api", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.8",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/Rocciadura/didupAPI-wrapper"
Issues = "https://github.com/Rocciadura/didupAPI-wrapper/issues"

[tool.hatch.build.targets.wheel]
packages = ["didupwrapper"]

[tool.hatch.build.targets.sdist]
include = [
    "didupwrapper",
    "tests",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
